syntax = "proto3";

option csharp_namespace = "BlazorGrpc.Protos";

message WebAppConfiguration {
    string api_url = 1;
}
